# madoz

./: .env.example  .gitignore  NOTES.md  README.md  pyproject.toml  wrangler.jsonc
data/: coords.json
data/index/: all.jsonl  combined.jsonl  from_scrape.jsonl  tomo01.jsonl  tomo02.jsonl  tomo03.jsonl  tomo04.jsonl  tomo05.jsonl  tomo06.jsonl  tomo07.jsonl  tomo08.jsonl  tomo09.jsonl  tomo10.jsonl  tomo11.jsonl  tomo12.jsonl  tomo13.jsonl  tomo14.jsonl  tomo15.jsonl  tomo16.jsonl  unrecoverable.jsonl
data/madoz/: extras.jsonl  (+2 more)
db/: schema.sql
scripts/: apple_vision_low_conf_sweep.py  apple_vision_reocr_all.py  apply_curated_links.py  audit_homonyms.py  audit_leaf_drift.py  audit_similarity.py  audit_titles.py  audit_titles_ngib.py  audit_titles_triple.py  build_gazetteer.py  clean_descriptions.py  cleanup_unverified.py  dedup_municipality_articles.py  enrich_coords.py  export_web_data.py  extract_text.py  extract_vision.py  fetch_ngib.py  fetch_pages.py  fetch_volume.py  fill_medium_conf_fields.py  fill_missing_islands.py  fix_ocr_accent_abbrev.py  fix_ocr_close_paren_titles.py  fix_ocr_digit_titles.py  fix_ocr_open_paren_titles.py  fix_ocr_replaced_open_paren.py  fix_ocr_spacing_titles.py  fix_title_mismatches.py  index_volume.py  infer_place_types.py  inner_lemma_audit.py  link_text_entries.py  load_chocr_index.py  load_text.py  load_vision.py  merge_index.py  migrate_add_description_raw.py  move_bracketed_notes.py  normalize_judicial_districts.py  (+24 more)
web/: README.md  _headers  abbreviations.json  app.js  data.json  index.html  robots.txt  sitemap.xml  style.css
(+2231 files in other folders)
